build(deps): bump the quarkus group with 2 updates (#159)
* build(deps): bump the quarkus group with 2 updates

Bumps the quarkus group with 2 updates: [io.smallrye:jandex](https://github.com/smallrye/jandex) and [io.quarkus.platform:quarkus-bom](https://github.com/quarkusio/quarkus-platform).


Updates `io.smallrye:jandex` from 3.2.7 to 3.6.0
- [Release notes](https://github.com/smallrye/jandex/releases)
- [Changelog](https://github.com/smallrye/jandex/blob/main/RELEASE_PROCEDURE.md)
- [Commits](https://github.com/smallrye/jandex/compare/3.2.7...3.6.0)

Updates `io.quarkus.platform:quarkus-bom` from 3.20.0 to 3.36.3
- [Commits](https://github.com/quarkusio/quarkus-platform/compare/3.20.0...3.36.3)

---
updated-dependencies:
- dependency-name: io.smallrye:jandex
  dependency-version: 3.6.0
  dependency-type: direct:production
  update-type: version-update:semver-minor
  dependency-group: quarkus
- dependency-name: io.quarkus.platform:quarkus-bom
  dependency-version: 3.36.3
  dependency-type: direct:production
  update-type: version-update:semver-minor
  dependency-group: quarkus
...

Signed-off-by: dependabot[bot] <support@github.com>

* build(quarkus): wire requires io.quarkus.arc / io.smallrye.config for 3.36

Quarkus 3.36 / smallrye-config 3.17 now expose proper JPMS module names
(io.quarkus.arc, io.smallrye.config) rather than living on the unnamed
module path. The pre-existing `--add-reads ... =ALL-UNNAMED` workaround
no longer reaches them, so the strict compile fails with
`package io.smallrye.config is not visible`.

Switch to real `requires` clauses in module-info.java:
- requires io.quarkus.arc;
- requires transitive io.smallrye.config; (transitive because @ConfigMapping
  / @WithDefault annotate the public TelescopeConfig surface)

Drop the now-redundant --add-reads from build.gradle.kts (compile + javadoc)
and the long historical comment explaining why it was needed — the proper
requires makes both obsolete.

---------

Signed-off-by: dependabot[bot] <su